event listeners and function have been added for basic functionality. I would like to refactor this later and use and event.target method on a larger parent container instead of individaul event listeners.

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,12 @@ nav a {
 
 }
 
+ul {
+    list-style: none;
+}
+
+
+
 #main-container{
     display: flex;
     justify-content: center;
@@ -28,4 +34,8 @@ nav a {
 #card-controls-container{
     display: flex;
     justify-content: center;
+}
+
+.hidden {
+    display: none;
 }
