--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,69 @@
-header{
+/* header{
     display: grid;
-    grid-template-columns: 1fr 200px;
+    grid-template-columns: 8fr 1fr;
+} */
+
+#menu{
+    /* background-color: blue; */
+    width: 35px;
+    height: 30px;
+    margin-top: 25px;
+    cursor: pointer;
+    margin-left: 85vw;
+    margin-top: -50px;
+    position: relative;
 }
 
+
+.bar{
+    height: 5px;
+    width: 100%;
+    background-color: cadetblue;
+    display: block;
+    border-radius: 5px;
+    transition: 0.3s ease;
+}
+
+
+#bar1{
+    transform: translateY(-4px);
+}
+
+#bar3{
+    transform: translateY(4px);
+}
+
+.expanded-hamburger-menu #bar2{
+    opacity: 0;
+}
+
+.expanded-hamburger-menu #bar1{
+    transform: rotateZ(-45deg) translateY(6px);
+}
+
+.expanded-hamburger-menu #bar3 {
+    transform: rotate(45deg) translateY(-7px);
+}
+
+ul {
+    list-style: none;
+}
+
+nav li {
+ margin: 0 20px;
+ padding: 20px 0;    
+}
+
+nav li:hover{
+    font-weight: bold;
+}
+
+
+
+/* Attribution Code Spot https://www.youtube.com/watch?v=F-mvXKKoSCU */
+
+/* 
+This is for the original nav bar with just a static help and login tag. It is currently commited out in the html as well 
 nav li {
     list-style: none;
     display: inline;
@@ -12,16 +73,12 @@ nav li {
 nav a {
     text-decoration: none;
     color: black;
-}
+} */
 
 #flashcard {
     width: 80vw;
     height: 80vw;
 
-}
-
-ul {
-    list-style: none;
 }
 
 
