--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
-/* header{
-    display: grid;
-    grid-template-columns: 8fr 1fr;
-} */
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
 
 #menu{
     /* background-color: blue; */
