--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
      font-family: 'Roboto', sans-serif;
 }
 
-.header{
+header{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -111,13 +111,24 @@ nav a {
     text-decoration: none;
     color: black;
 } */
-container-center-create-card{
+.container-center-custom{
     display: flex;
     justify-content: center;
-    width: 100%;
-    height: 100%;
-    background-color: rosybrown;
-    z-index: 3;
+}
+
+#create-card-modal{
+    position: relative;
+    display: flex;
+    text-align: center;
+    padding: 10px;
+    width: 300px;
+    height: 250px;
+    background-color: #D6E8EE;
+    border-radius: 2px;
+
+.container-card-list {
+    display: flex;
+    justify-content: center;
 }
 
 input{
@@ -141,15 +152,6 @@ form a:hover{
     color: tomato;
 }
 
-.create-card-modal{
-    position: relative;
-    display: flex;
-    text-align: center;
-    padding: 10px;
-    width: 400px;
-    height: 300px;
-    background-color: #D6E8EE;
-    border-radius: 2px;
 }
 #flashcard {
     width: 70vw;
@@ -161,14 +163,6 @@ form a:hover{
     padding-right: 30px;
 }
 
-#create-card-modal p{
-    margin-top: 10px;
-    margin-bottom: 50px;
-}
-
-#create-card-modal input{
-    margin: 10px 0;
-}
 
 
 #main-container{
@@ -190,11 +184,11 @@ ul li{
 }
 
 /* Menu Modal START */
-/* #menu-options-modal{
-    /* background-color: rgb(179, 179, 177); */
+#menu-options-modal{
+    background-color: rgb(179, 179, 177);
     /* margin-top: 100px; */
 
-/* } */ 
+}
 /* Menu Modal END */
 
 
