--- a/styles.css
+++ b/styles.css
@@ -135,12 +135,18 @@ nav a {
 #cards-list-modal {
     position: relative;
     display: flex;
+    justify-content: center;
     text-align: center;
     padding: 10px;
     width: 300px;
     height: 250px;
     background-color: #D6E8EE;
     border-radius: 2px;
+    overflow: scroll;
+}
+
+.card-title{
+  
 }
 
 .container-search{
