--- a/styles.css
+++ b/styles.css
@@ -193,6 +193,11 @@ form a{
 }
 
 
+.card-total{
+    text-align: center;
+}
+
+
 
 
 #flashcard {
@@ -234,6 +239,31 @@ form a{
     display: none;
 }
 
-ul li{
-    list-style: none;
+.visable{
+    display: flex;
 }
+
+
+
+/* Working on this later. this is to add a modal or a text box when a card is added to let users know */
+/* ul li{
+    list-style: none;
+} */
+
+/* .item-added{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+.item-added-modal{
+    width: 200px;
+    height: 200px;
+    background-color: white;
+} */
