--- a/styles.css
+++ b/styles.css
@@ -1,112 +1,101 @@
-html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
+html,
+body {
+	width: 100%;
+	height: 100%;
+	margin: 0;
 }
 
 body {
-     background-color: #97CADB;
-     font-family: 'Roboto', sans-serif;
+	background-color: #97cadb;
+	font-family: 'Roboto', sans-serif;
 }
 
-header{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+header {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-h1{
-    font-size: 40px;
-    font-family: 'Permanent Marker', cursive;
-    color: #001B48;
-    text-shadow: 2px 2px #D6E8EE;
-    padding: 10px;
+h1 {
+	font-size: 40px;
+	font-family: 'Permanent Marker', cursive;
+	color: #001b48;
+	text-shadow: 2px 2px #d6e8ee;
+	padding: 10px;
 }
 
-#menu{
-    width: 35px;
-    height: 5px;
-    cursor: pointer;
-    z-index: 2;
-    
+#menu {
+	width: 35px;
+	height: 5px;
+	cursor: pointer;
+	z-index: 2;
 }
 
-#menu:active{
-    
+#menu:active {
 }
 
-
-#menu-options ul{
-    list-style: none;
-    padding-left: 0;
-    
+#menu-options ul {
+	list-style: none;
+	padding-left: 0;
 }
 
-#menu-options li{
-    background-color: #018ABE;
-    line-height: 70px;
-    text-align: center;
-    font-size: 26px;
-    border-bottom:solid 1px #D6E8EE;
-    border-radius: 5px;
-    /* transition-property: all;
+#menu-options li {
+	background-color: #018abe;
+	line-height: 70px;
+	text-align: center;
+	font-size: 26px;
+	border-bottom: solid 1px #d6e8ee;
+	border-radius: 5px;
+	/* transition-property: all;
     transition-duration: 1000ms; */
-    
 }
 
-#menu-options li:hover{
-    background-color: #014a66;
+#menu-options li:hover {
+	background-color: #014a66;
 }
 
-#menu-options a{
-    text-decoration: none;
-    color: black;
-     color: #D6E8EE;
+#menu-options a {
+	text-decoration: none;
+	color: black;
+	color: #d6e8ee;
 }
 
-#menu-options a:hover{
-    font-weight: bold;
+#menu-options a:hover {
+	font-weight: bold;
 }
 
-.bar{
-    height: 5px;
-    width: 100%;
-    background-color: #D6E8EE;
-    display: block;
-    border-radius: 5px;
-    transition: 0.3s ease;
-  
+.bar {
+	height: 5px;
+	width: 100%;
+	background-color: #d6e8ee;
+	display: block;
+	border-radius: 5px;
+	transition: 0.3s ease;
 }
 
 /* Attribution: Caler Edwards https://www.youtube.com/watch?v=xMTs8tAapnQ */
-#bar1{
-    transform: translateY(-4px);
+#bar1 {
+	transform: translateY(-4px);
 }
 
-#bar2{
-   
+#bar2 {
 }
 
-#bar3{
-    transform: translateY(4px);
-    
+#bar3 {
+	transform: translateY(4px);
 }
 
-.expanded-hamburger-menu #bar2{
-    opacity: 0;
+.expanded-hamburger-menu #bar2 {
+	opacity: 0;
 }
 
-.expanded-hamburger-menu #bar1{
-    transform: rotateZ(-45deg) translateY(6px);
+.expanded-hamburger-menu #bar1 {
+	transform: rotateZ(-45deg) translateY(6px);
 }
 
 .expanded-hamburger-menu #bar3 {
-    transform: rotate(45deg) translateY(-7px);
+	transform: rotate(45deg) translateY(-7px);
 }
-
-
-
-
 
 /* Attribution Code Spot https://www.youtube.com/watch?v=F-mvXKKoSCU */
 
@@ -122,128 +111,128 @@ nav a {
     text-decoration: none;
     color: black;
 } */
-.container-center-custom{
-    display: flex;
-    justify-content: center;
+.container-center-custom {
+	display: flex;
+	justify-content: center;
 }
 
-#create-card-modal{
-    position: relative;
-    display: flex;
-    text-align: center;
-    padding: 10px;
-    width: 300px;
-    height: 250px;
-    background-color: #D6E8EE;
-    border-radius: 2px;
+#create-card-modal {
+	position: relative;
+	display: flex;
+	text-align: center;
+	padding: 10px;
+	width: 300px;
+	height: 250px;
+	background-color: #d6e8ee;
+	border-radius: 2px;
 }
 
 .container-card-list {
-    display: flex;
-    justify-content: center;
+	display: flex;
+	justify-content: center;
 }
 
 #cards-list-modal {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    padding: 10px;
-    width: 300px;
-    height: 250px;
-    background-color: #D6E8EE;
-    border-radius: 2px;
-    overflow: scroll;
+	position: relative;
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	padding: 10px;
+	width: 300px;
+	height: 250px;
+	background-color: #d6e8ee;
+	border-radius: 2px;
+	overflow: scroll;
 }
 
-
-.container-search{
-     display: flex;
-    justify-content: center;
+.container-search {
+	display: flex;
+	justify-content: center;
 }
 
-.search-modal{
-    position: relative;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    width: 300px;
-    height: 250px;
-    background-color: #D6E8EE;
-    border-radius: 2px;
+.search-modal {
+	position: relative;
+	text-align: center;
+	display: flex;
+	align-items: center;
+	padding: 10px;
+	width: 300px;
+	height: 250px;
+	background-color: #d6e8ee;
+	border-radius: 2px;
 }
 
-
-input{
-    width: 80%;
-    height: 20px;
-    text-align: center;
-    margin: 5px 0;
+input {
+	width: 80%;
+	height: 20px;
+	text-align: center;
+	margin: 5px 0;
 }
 
-form a{
-    color: white;
-    font-weight: bold;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    padding: 10px 10px;
-    text-decoration: none;
+form a {
+	color: white;
+	font-weight: bold;
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	padding: 10px 10px;
+	text-decoration: none;
 }
 
-
-.card-total{
-    text-align: center;
+.card-total {
+	text-align: center;
 }
-
-
-
 
 #flashcard {
-    width: 70vw;
-    height: 35vw;
-    border-radius: 10px;
-    background-color: white;
-    margin: 20px 10px;
-    padding-top: 20px;
-    padding-right: 30px;
-    overflow: auto;
+	width: 70vw;
+	height: 35vw;
+	border-radius: 10px;
+	background-color: white;
+	margin: 20px 10px;
+	padding-top: 20px;
+	padding-right: 30px;
+	overflow: auto;
 }
 
-
-
-#main-container{
-    display: flex;
-    justify-content: center;
+#main-container {
+	display: flex;
+	justify-content: center;
 }
 
-#card-controls-container{
-    display: flex;
-    justify-content: center;
+#card-controls-container {
+	display: flex;
+	justify-content: center;
 }
 
-.button-wrapper{
-    width: 70vw;
-    height: 300px;
+.button-wrapper {
+	width: 70vw;
+	height: 300px;
 }
-.control-buttons{
-    background-color: #D6E8EE;
-    width: 100px;
-    height: 30px;
-    border-radius: 6px;
-    margin: 10px 5px ;
+.control-buttons {
+	background-color: #d6e8ee;
+	width: 100px;
+	height: 30px;
+	border-radius: 6px;
+	margin: 10px 5px;
 }
 
 .hidden {
-    display: none;
+	display: none;
 }
 
-.visable{
-    display: flex;
+.visable {
+	display: flex;
 }
 
+#previous-button {
+	font-size: 30px;
+	line-height: 0px;
+}
 
+#next-button {
+	font-size: 30px;
+	line-height: 0px;
+}
 
 /* Working on this later. this is to add a modal or a text box when a card is added to let users know */
 /* ul li{
