--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,8 @@ h1 {
 #menu-options a {
 	text-decoration: none;
 	color: black;
-	color: #d6e8ee;
+    color: #d6e8ee;
+    z-index: 4;
 }
 
 #menu-options a:hover {
@@ -157,9 +158,10 @@ nav a {
 	align-items: center;
 	padding: 10px;
 	width: 300px;
-	height: 250px;
+	height: 400px;
 	background-color: #d6e8ee;
-	border-radius: 2px;
+    border-radius: 2px;
+    margin-bottom: 50px;
 }
 
 input {
