--- a/styles.css
+++ b/styles.css
@@ -123,9 +123,10 @@ nav a {
 	text-align: center;
 	padding: 10px;
 	width: 300px;
-	height: 250px;
+	height: 400px;
 	background-color: #d6e8ee;
-	border-radius: 2px;
+    border-radius: 2px;
+    margin-bottom: 50px;
 }
 
 .container-card-list {
@@ -236,6 +237,14 @@ form a {
 	line-height: 0px;
 }
 
+h3{
+    font-size: 20px;
+}
+
+p{
+    font-size: 15px;
+    line-height: 1.5em;
+}
 /* Working on this later. this is to add a modal or a text box when a card is added to let users know */
 /* ul li{
     list-style: none;
