div was child of ul. This is not valid html. I place the div inside of a li that is child to a ul. Fixed this issue for the card list tab

--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,8 @@ nav a {
 	height: 250px;
 	background-color: #d6e8ee;
 	border-radius: 2px;
-	overflow: scroll;
+    overflow: scroll;
+    margin-bottom: 50px;
 }
 
 .container-search {
